--- a/wayback-cdx-server-webapp/pom.xml
+++ b/wayback-cdx-server-webapp/pom.xml
@@ -3,7 +3,7 @@
 
   <parent>
     <artifactId>openwayback</artifactId>
-    <groupId>org.netpreserve.openwayback</groupId>
+    <groupId>dk.netarchivesuite</groupId>
     <version>2.4.0-SNAPSHOT</version>
   </parent>
 
@@ -21,8 +21,9 @@
 
   <dependencies>
       <dependency>
-          <groupId>${project.groupId}</groupId>
+          <groupId>dk.netarchivesuite</groupId>
           <artifactId>openwayback-cdx-server</artifactId>
+          <version>2.4.0-SNAPSHOT</version>
       </dependency>
   </dependencies>
 
