--- a/wayback-core/pom.xml
+++ b/wayback-core/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <artifactId>openwayback</artifactId>
-    <groupId>org.netpreserve.openwayback</groupId>
+    <groupId>dk.netarchivesuite</groupId>
     <version>2.4.0-SNAPSHOT</version>
   </parent>
 
@@ -31,8 +31,9 @@
 
   <dependencies>
       <dependency>
-          <groupId>${project.groupId}</groupId>
+          <groupId>dk.netarchivesuite</groupId>
           <artifactId>openwayback-cdx-server</artifactId>
+        <version>2.4.0-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>junit</groupId>
