--- a/wayback-cdx-server-webapp/pom.xml
+++ b/wayback-cdx-server-webapp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>openwayback</artifactId>
     <groupId>dk.netarchivesuite</groupId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-NAS-SNAPSHOT</version>
   </parent>
 
   <artifactId>openwayback-cdx-server-webapp</artifactId>
