--- a/wayback-core/pom.xml
+++ b/wayback-core/pom.xml
@@ -33,7 +33,7 @@
       <dependency>
           <groupId>dk.netarchivesuite</groupId>
           <artifactId>openwayback-cdx-server</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0-NAS-SNAPSHOT</version>
       </dependency>
     <dependency>
       <groupId>junit</groupId>
