--- a/wayback-core/pom.xml
+++ b/wayback-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>openwayback</artifactId>
     <groupId>dk.netarchivesuite</groupId>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-NAS-SNAPSHOT</version>
   </parent>
 
   <artifactId>openwayback-core</artifactId>
