--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+				    <groupId>org.apache.maven.plugins</groupId>
+				    <artifactId>maven-gpg-plugin</artifactId>
+				    <configuration>
+				        <skip>true</skip>
+				    </configuration>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<configuration>
