--- a/pom.xml
+++ b/pom.xml
@@ -247,12 +247,12 @@
                     <version>2.5.1</version>
                     <configuration>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <mavenExecutorId>forked-path</mavenExecutorId>
+                        <!--<mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
                         <pushChanges>false</pushChanges>
                         <localCheckout>true</localCheckout>
                         <arguments>-Psonatype-oss-release</arguments>
-                        <goals>deploy</goals>
+                        <goals>deploy</goals> -->
                     </configuration>
                 </plugin>
 			</plugins>
