--- a/wayback-cdx-server-core/pom.xml
+++ b/wayback-cdx-server-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>dk.netarchivesuite</groupId>
         <artifactId>openwayback</artifactId>
-        <version>2.4.0-NAS-1.3-SNAPSHOT</version>
+        <version>2.4.0-NAS-1.3</version>
     </parent>
 
     <artifactId>openwayback-cdx-server</artifactId>
