--- a/wayback-cdx-server-webapp/pom.xml
+++ b/wayback-cdx-server-webapp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>openwayback</artifactId>
     <groupId>dk.netarchivesuite</groupId>
-    <version>2.4.0-NAS-1.4-SNAPSHOT</version>
+    <version>2.4.0-NAS-7.0</version>
   </parent>
 
   <artifactId>openwayback-cdx-server-webapp</artifactId>
@@ -23,7 +23,7 @@
       <dependency>
           <groupId>dk.netarchivesuite</groupId>
           <artifactId>openwayback-cdx-server</artifactId>
-          <version>2.4.0-NAS-1.2-SNAPSHOT</version>
+          <version>${project.version}</version>
       </dependency>
   </dependencies>
 
