--- a/wayback-core/pom.xml
+++ b/wayback-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>openwayback</artifactId>
     <groupId>dk.netarchivesuite</groupId>
-    <version>2.4.0-NAS-1.4-SNAPSHOT</version>
+    <version>2.4.0-NAS-7.0</version>
   </parent>
 
   <artifactId>openwayback-core</artifactId>
@@ -33,7 +33,7 @@
       <dependency>
           <groupId>dk.netarchivesuite</groupId>
           <artifactId>openwayback-cdx-server</artifactId>
-        <version>2.4.0-NAS-1.2-SNAPSHOT</version>
+        <version>${project.version}</version>
       </dependency>
     <dependency>
       <groupId>junit</groupId>
