--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>dk.netarchivesuite</groupId>
 	<artifactId>openwayback</artifactId>
 	<packaging>pom</packaging>
-	<version>2.4.0-NAS-7.0</version>
+	<version>2.4.0-NAS-7.0-SNAPSHOT</version>
 	<name>OpenWayback</name>
 
 	<modules>
