--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>dk.netarchivesuite</groupId>
 	<artifactId>openwayback</artifactId>
 	<packaging>pom</packaging>
-	<version>2.4.0-NAS-7.0</version>
+	<version>2.4.0-NAS-8.0-SNAPSHOT</version>
 	<name>OpenWayback</name>
 
 	<modules>
@@ -144,7 +144,7 @@
 		<connection>scm:git:git@github.com:netarchivesuite/openwayback-netarchivesuite.git</connection>
 		<developerConnection>scm:git:git@github.com:netarchivesuite/openwayback-netarchivesuite.git</developerConnection>
 		<url>git@github.com:iipc/openwayback.git</url>
-	  <tag>openwayback-2.4.0-NAS-7.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<prerequisites>
